--- a/DRRadioBeta/AndroidManifest.xml
+++ b/DRRadioBeta/AndroidManifest.xml
@@ -30,6 +30,10 @@
         </activity>
         <activity android:name="dk.dr.radio.Indstillinger_akt"
                   android:label="DR Radio Indstillinger">
+             <intent-filter>
+                <action android:name="android.intent.action.MANAGE_NETWORK_USAGE" />
+                <category android:name="android.intent.category.DEFAULT" />
+          </intent-filter>
         </activity>
 
 
