--- a/DRRadio/AndroidManifest.xml
+++ b/DRRadio/AndroidManifest.xml
@@ -1,94 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="dk.dr.radio"
-      android:versionCode="30"
-      android:versionName="2.9.0">
+          package="dk.dr.radio"
+          android:versionCode="30"
+          android:versionName="2.9.0">
 
-  <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="18" />
-
-
-  <uses-permission android:name="android.permission.INTERNET"></uses-permission>
-  <uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
-  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
-  <uses-permission android:name="android.permission.WAKE_LOCK" />
-<!--
-  <uses-feature android:name="android.hardware.screen.portrait" android:required="false" />
--->
+    <uses-sdk
+            android:minSdkVersion="7"
+            android:targetSdkVersion="18"/>
 
 
-    <application android:icon="@drawable/appicon"
-          android:name="dk.dr.radio.diverse.AcraApplication"
-          android:process="dk.dr.radio"
-          android:label="@string/app_name">
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <!--
+      <uses-feature android:name="android.hardware.screen.portrait" android:required="false" />
+    -->
 
-        <activity android:name="dk.dr.radio.Splash_akt" android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-                  android:screenOrientation="portrait">
+
+    <application
+            android:icon="@drawable/appicon"
+            android:name="dk.dr.radio.diverse.AcraApplication"
+            android:process="dk.dr.radio"
+            android:label="@string/app_name">
+
+        <activity
+                android:name="dk.dr.radio.Splash_akt"
+                android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+                android:screenOrientation="portrait">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="dk.dr.radio.Afspilning_akt" android:theme="@android:style/Theme.NoTitleBar"
-                  android:label="DR Radio"
-              android:launchMode="singleTask" android:screenOrientation="portrait">
+        <activity
+                android:name="dk.dr.radio.Afspilning_akt"
+                android:theme="@android:style/Theme.NoTitleBar"
+                android:label="DR Radio"
+                android:launchMode="singleTask"
+                android:screenOrientation="portrait">
         </activity>
-        <activity android:name="dk.dr.radio.Om_DRRadio_akt"
-                  android:label="Om DR Radio"
-        		  android:screenOrientation="portrait">
+        <activity
+                android:name="dk.dr.radio.Om_DRRadio_akt"
+                android:label="Om DR Radio"
+                android:screenOrientation="portrait">
         </activity>
-        <activity android:name="dk.dr.radio.Kanalvalg_akt" android:theme="@android:style/Theme.NoTitleBar"
-                  android:label="Kanalvalg"
-              android:noHistory="true"
-         		  android:screenOrientation="portrait">
+        <activity
+                android:name="dk.dr.radio.Kanalvalg_akt"
+                android:theme="@android:style/Theme.NoTitleBar"
+                android:label="Kanalvalg"
+                android:noHistory="true"
+                android:screenOrientation="portrait">
         </activity>
-        <activity android:name="dk.dr.radio.Indstillinger_akt"
-                  android:label="DR Radio Indstillinger"
-        		  android:screenOrientation="portrait">
-             <intent-filter>
-                <action android:name="android.intent.action.MANAGE_NETWORK_USAGE" />
-                <category android:name="android.intent.category.DEFAULT" />
-          </intent-filter>
+        <activity
+                android:name="dk.dr.radio.Indstillinger_akt"
+                android:label="DR Radio Indstillinger"
+                android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MANAGE_NETWORK_USAGE"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
         </activity>
 
 
-<!--
- * Tidligere AfspillerService - service-del der sørger for at app'en
- * bliver i hukommelsen mens der spilles lyd
--->
-    <service android:name="dk.dr.radio.afspilning.HoldAppIHukommelsenService" />
-
-
-    <!--
- * BroadcastReceiver som aktiverer afspilleren og evt instantierer den.
- * I tilfælde af at processen har været smidt ud af hukommelsen er dette
- * her faktisk den første kode der køres, derfor er et fuldt
-    -->
-    <receiver android:name="dk.dr.radio.afspilning.AfspillerReciever" />
-
-
-<!-- Til håndtering af knapper på fjernbetjening (f.eks. på Bluetooth headset.)
-     Mangler: God håndtering i tråd med forslag i
-     http://android-developers.blogspot.com/2010/06/allowing-applications-to-play-nicer.html
--->
-    <receiver android:name="dk.dr.radio.diverse.MediabuttonReceiver" >
-      <intent-filter android:priority="1" >
-        <action android:name="android.intent.action.MEDIA_BUTTON" />
-      </intent-filter>
-    </receiver>
-
-    <receiver android:name="dk.dr.radio.diverse.AfspillerWidget"
-    	 android:label="DR Radio">
-      <intent-filter>
-        <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
-        <!-- Denne skal IKKE være i manifestet da det gør at widgetten instantieres når servicen sender broadcastet!
-        <action android:name="dk.dr.radio.afspiller.OPDATERING_STARTSTOP_væk_fjernet"></action>
+        <!--
+         * Tidligere AfspillerService - service-del der sørger for at app'en
+         * bliver i hukommelsen mens der spilles lyd
         -->
-      </intent-filter>
-      <meta-data android:name="android.appwidget.provider"
-	               android:resource="@xml/afspiller_widgetinfo" />
-    </receiver>
+        <service android:name="dk.dr.radio.afspilning.HoldAppIHukommelsenService"/>
 
 
-  </application>
+        <!--
+     * BroadcastReceiver som aktiverer afspilleren og evt instantierer den.
+     * I tilfælde af at processen har været smidt ud af hukommelsen er dette
+     * her faktisk den første kode der køres, derfor er et fuldt
+        -->
+        <receiver android:name="dk.dr.radio.afspilning.AfspillerReciever"/>
+
+
+        <!-- Til håndtering af knapper på fjernbetjening (f.eks. på Bluetooth headset.)
+             Mangler: God håndtering i tråd med forslag i
+             http://android-developers.blogspot.com/2010/06/allowing-applications-to-play-nicer.html
+        -->
+        <receiver android:name="dk.dr.radio.diverse.MediabuttonReceiver">
+            <intent-filter android:priority="1">
+                <action android:name="android.intent.action.MEDIA_BUTTON"/>
+            </intent-filter>
+        </receiver>
+
+        <receiver
+                android:name="dk.dr.radio.diverse.AfspillerWidget"
+                android:label="DR Radio">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
+                <!-- Denne skal IKKE være i manifestet da det gør at widgetten instantieres når servicen sender broadcastet!
+                <action android:name="dk.dr.radio.afspiller.OPDATERING_STARTSTOP_væk_fjernet"></action>
+                -->
+            </intent-filter>
+            <meta-data
+                    android:name="android.appwidget.provider"
+                    android:resource="@xml/afspiller_widgetinfo"/>
+        </receiver>
+
+
+    </application>
 
 </manifest>
