--- a/DRRadio/AndroidManifest.xml
+++ b/DRRadio/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <uses-sdk
             android:minSdkVersion="7"
-            android:targetSdkVersion="18"/>
+            android:targetSdkVersion="19"/>
 
 
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
@@ -22,6 +22,7 @@
             android:icon="@drawable/appicon"
             android:name="dk.dr.radio.diverse.AcraApplication"
             android:process="dk.dr.radio"
+            android:allowBackup="true"
             android:label="@string/app_name">
 
         <activity
