--- a/DRRadiov3/AndroidManifest.xml
+++ b/DRRadiov3/AndroidManifest.xml
@@ -20,7 +20,12 @@
             android:name="dk.dr.radio.diverse.App"
             android:icon="@drawable/ic_launcher"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme">
+            android:theme="@style/CustomActionBarTheme"
+            >
+
+        <!--
+                    android:theme="@style/AppTheme"
+                    -->
         <activity
                 android:name="dk.dr.radio.akt_v3.Hovedaktivitet"
                 android:label="@string/app_name">
