--- a/DRRadiov3/AndroidManifest.xml
+++ b/DRRadiov3/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="dk.dr.radio.v3">
+          package="dk.dr.radio.v3"
+          android:versionCode="1"
+          android:versionName="0.0.1 afspiller">
 
-    <uses-sdk
+<uses-sdk
             android:minSdkVersion="9"
             android:targetSdkVersion="19"/>
 
