Fix billedskalerings-URL for disco-server Brug datostabilt API, slå caching til (og forespørg kun én gang)' opdater kun Aktuel Udsendelse hvis den er synlig (Actionbar faner driller stadig)

--- a/DRRadiov3/AndroidManifest.xml
+++ b/DRRadiov3/AndroidManifest.xml
@@ -22,10 +22,12 @@
             android:name="dk.dr.radio.diverse.App"
             android:icon="@drawable/ic_launcher"
             android:label="@string/app_name"
-            android:theme="@style/CustomActionBarTheme"
+            android:theme="@style/Theme.Drxx_ab"
             >
 
         <!--
+            android:theme="@style/CustomActionBarTheme"
+            android:theme="@style/Theme.Drxx_ab"
                     android:theme="@style/AppTheme"
                     -->
         <activity
