Hent skalerede billeder, der passer præcist til skærmen Op-navigering i underaktiviteter ALLE skrifttyper skal være DR - udvikling_checkDrSkrifter tjekker det Fixet: Selvom der var streams blev HØR-knappen ikke vist første gang Diverse

--- a/DRRadiov3/AndroidManifest.xml
+++ b/DRRadiov3/AndroidManifest.xml
@@ -39,7 +39,11 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="dk.dr.radio.diverse.ui.VisFragment_akt"/>
+        <activity android:name="dk.dr.radio.diverse.ui.VisFragment_akt">
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value="dk.dr.radio.akt.Hovedaktivitet"/>
+        </activity>
 
 
         <activity
