Indstillinger til eksperienter: TITELTEKST_KUN_SORT_LIGE_BAG_TEKST brugGibsonIVenstremenu Pænest hvis slået fra (efter min mening, men sikkert ikke efter DRs designafdeling)

--- a/DRRadiov3/AndroidManifest.xml
+++ b/DRRadiov3/AndroidManifest.xml
@@ -54,7 +54,7 @@
 
 
         <activity
-                android:name="dk.dr.radio.skrald.Indstillinger_akt"
+                android:name="dk.dr.radio.akt.Indstillinger_akt"
                 android:label="DR Radio Indstillinger">
             <!-- Gør aktivitet synlig i forbindelse med at brugeren gennemser sit dataforbrug -->
             <intent-filter>
