Fix for søgning i en udsendelse på Android 2 Hentning

--- a/DRRadiov3/AndroidManifest.xml
+++ b/DRRadiov3/AndroidManifest.xml
@@ -61,7 +61,7 @@
                 android:theme="@android:style/Theme.NoTitleBar"
         -->
 
-        <receiver android:name="dk.dr.radio.diverse.Hentning$DownloadServiceBR">
+        <receiver android:name="dk.dr.radio.diverse.Hentning$DownloadServiceReciever">
             <intent-filter>
                 <action android:name="android.intent.action.DOWNLOAD_COMPLETE"/>
                 <action android:name="android.intent.action.DOWNLOAD_NOTIFICATION_CLICKED"/>
