Navngivning og struktur

--- a/DRRadiov3/AndroidManifest.xml
+++ b/DRRadiov3/AndroidManifest.xml
@@ -40,7 +40,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="dk.dr.radio.akt.diverse.VisFragment_akt">
+        <activity android:name="dk.dr.radio.akt.VisFragment_akt">
             <meta-data
                     android:name="android.support.PARENT_ACTIVITY"
                     android:value="dk.dr.radio.akt.Hovedaktivitet"/>
@@ -90,7 +90,7 @@
         </receiver>
 
         <receiver
-                android:name="dk.dr.radio.akt.diverse.AfspillerWidget"
+                android:name="dk.dr.radio.diverse.AfspillerIkonOgNotifikation"
                 android:label="DR Radio">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
@@ -102,7 +102,7 @@
 
 
         <!-- Denne aktivitet fanger browsning af URLer der starter med http://dr.dk/radio/ondemand/ -->
-        <activity android:name="dk.dr.radio.akt.diverse.FangBrowseIntent">
+        <activity android:name="dk.dr.radio.akt.FangBrowseIntent_akt_skrald">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
 
