--- a/DRRadiov3/AndroidManifest.xml
+++ b/DRRadiov3/AndroidManifest.xml
@@ -16,6 +16,9 @@
     <!-- For at kunne gemme podcasts -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
+    <!-- akamai -->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+
 
     <application
             android:allowBackup="true"
