v 0.1.4.6 - akamai 26.marts oprydning og navngivning (Akamai-ændringer der ikke comittes til offentligt repo)

--- a/DRRadiov3/AndroidManifest.xml
+++ b/DRRadiov3/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="dk.dr.radio.v3"
           android:versionCode="1"
-          android:versionName="0.1.4.5 - 26.marts">
+          android:versionName="0.1.4.6 - akamai 26.marts">
 
 <uses-sdk
             android:minSdkVersion="7"
@@ -64,7 +64,7 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name="dk.dr.radio.diverse.Hentning$DownloadServiceReciever">
+        <receiver android:name="dk.dr.radio.data.HentedeUdsendelser$DownloadServiceReciever">
             <intent-filter>
                 <action android:name="android.intent.action.DOWNLOAD_COMPLETE"/>
                 <action android:name="android.intent.action.DOWNLOAD_NOTIFICATION_CLICKED"/>
