--- a/DRRadiov3/AndroidManifest.xml
+++ b/DRRadiov3/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="dk.dr.radio.v3"
           android:versionCode="1"
-          android:versionName="0.1.4.7 - akamai2 26.marts">
+          android:versionName="0.1.4.7b - akamai2 26.marts">
 
 <uses-sdk
             android:minSdkVersion="7"
