--- a/DRRadiov3/AndroidManifest.xml
+++ b/DRRadiov3/AndroidManifest.xml
@@ -3,7 +3,7 @@
           package="dk.dr.radio.v3"
           android:installLocation="auto"
           android:versionCode="1"
-          android:versionName="3.0.2 beta2 - 14.maj">
+          android:versionName="3.0.2 beta3 - 21.maj m3u8">
 
     <uses-sdk
             android:minSdkVersion="7"
@@ -41,6 +41,7 @@
             android:logo="@drawable/dr_logo_stort"
                     -->
         <activity
+                android:launchMode="singleTop"
                 android:name="dk.dr.radio.akt.Hovedaktivitet"
                 android:label="@string/app_name">
             <intent-filter>
