--- a/DRRadiov3/AndroidManifest.xml
+++ b/DRRadiov3/AndroidManifest.xml
@@ -3,7 +3,7 @@
           package="dk.dr.radio.v3"
           android:installLocation="auto"
           android:versionCode="1"
-          android:versionName="3.0.2 beta7 6.juni">
+          android:versionName="3.0.2 beta8 11.juni">
 
     <uses-sdk
             android:minSdkVersion="7"
@@ -21,6 +21,8 @@
     <!-- akamai
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 
     <uses-feature android:name="android.hardware.TOUCHSCREEN" android:required="false"/>
     <uses-feature android:name="android.hardware.WIFI" android:required="false"/>
