--- a/DRRadiov3/AndroidManifest.xml
+++ b/DRRadiov3/AndroidManifest.xml
@@ -3,7 +3,7 @@
           package="dk.dr.radio.v3"
           android:installLocation="auto"
           android:versionCode="1"
-          android:versionName="3.0.2 beta8 11.juni">
+          android:versionName="3.0.2 beta 14.juni">
 
     <uses-sdk
             android:minSdkVersion="7"
