--- a/DRRadiov3/AndroidManifest.xml
+++ b/DRRadiov3/AndroidManifest.xml
@@ -3,7 +3,7 @@
           package="dk.dr.radio.v3"
           android:installLocation="auto"
           android:versionCode="1"
-          android:versionName="3.0.2 beta 17.juli gemiu B">
+          android:versionName="3.1.0 anim">
 
     <uses-sdk
             android:minSdkVersion="7"
@@ -78,14 +78,14 @@ android.permission.WAKE_LOCK
             </intent-filter>
         </activity>
 
+
+        <!--
         <receiver android:name="dk.dr.radio.data.HentedeUdsendelser$DownloadServiceReciever">
             <intent-filter>
                 <action android:name="android.intent.action.DOWNLOAD_COMPLETE"/>
                 <action android:name="android.intent.action.DOWNLOAD_NOTIFICATION_CLICKED"/>
             </intent-filter>
         </receiver>
-
-        <!--
          * Tidligere AfspillerService - service-del der sørger for at app'en
          * bliver i hukommelsen mens der spilles lyd
         -->
