--- a/DRRadiov3/AndroidManifest.xml
+++ b/DRRadiov3/AndroidManifest.xml
@@ -3,12 +3,16 @@
           package="dk.dr.radio.v3"
           android:installLocation="auto"
           android:versionCode="1"
-          android:versionName="3.1.0  17.sept">
+          android:versionName="3.1.0 18.sept vækning">
 
     <uses-sdk
             android:minSdkVersion="7"
             android:targetSdkVersion="19"/>
 
+
+    <!-- Por subteni vekhorloĝon -->
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
@@ -146,7 +150,43 @@ android.permission.WAKE_LOCK
             </intent-filter>
         </activity>
 
+        <activity android:name="com.android.deskclock.AlarmClock_akt"
+                  android:icon="@drawable/deskclock_ic_menu_alarms"
+                  android:label="@string/alarm_list_title"
+                  android:theme="@style/AlarmClockTheme"
+                  android:configChanges="orientation|keyboardHidden|keyboard|navigation"
+                >
+            <!--
+<intent-filter>
+<action android:name="android.intent.action.MAIN"/>
+<category android:name="android.intent.category.LAUNCHER"/>
+</intent-filter>
+-->
+        </activity>
 
+
+        <activity android:name="com.android.deskclock.SetAlarm_akt"
+                  android:label="@string/set_alarm"
+                  android:theme="@style/SetAlarmTheme"
+                  android:configChanges="orientation|keyboardHidden|keyboard|navigation" />
+
+
+        <receiver android:name="com.android.deskclock.AlarmReceiver"
+                  android:exported="false">
+            <intent-filter><!-- XXXX -->
+                <action android:name="comx.android.deskclock.ALARM_ALERT" />
+            </intent-filter>
+        </receiver>
+
+
+        <receiver android:name="com.android.deskclock.AlarmInitReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.TIME_SET" />
+                <action android:name="android.intent.action.TIMEZONE_CHANGED" />
+                <action android:name="android.intent.action.LOCALE_CHANGED" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
