--- a/DRRadiov3/AndroidManifest.xml
+++ b/DRRadiov3/AndroidManifest.xml
@@ -3,7 +3,7 @@
           package="dk.dr.radio.v3"
           android:installLocation="auto"
           android:versionCode="1"
-          android:versionName="3.1.0 24.sept">
+          android:versionName="3.1.1 1. okt adapterfix">
 
     <uses-sdk
             android:minSdkVersion="7"
