--- a/DRRadiov3/AndroidManifest.xml
+++ b/DRRadiov3/AndroidManifest.xml
@@ -3,7 +3,7 @@
           package="dk.dr.radio.v3"
           android:installLocation="auto"
           android:versionCode="1"
-          android:versionName="3.1.2 2. okt pause hentede udsendelser + fav">
+          android:versionName="3.1.3 2. okt pause hentede uds + fav + webplayer">
 
     <uses-sdk
             android:minSdkVersion="7"
@@ -126,7 +126,17 @@ android.permission.WAKE_LOCK
 
                 <category android:name="android.intent.category.DEFAULT"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
+                <!-- direkte udsendelser -->
+                <data
+                        android:scheme="http"
+                        android:host="dr.dk"
+                        android:pathPrefix="/radio/live/"/>
+                <data
+                        android:scheme="http"
+                        android:host="www.dr.dk"
+                        android:pathPrefix="/radio/live/"/>
 
+                <!-- arkiverede udsendelser-->
                 <data
                         android:scheme="http"
                         android:host="dr.dk"
@@ -135,14 +145,6 @@ android.permission.WAKE_LOCK
                         android:scheme="http"
                         android:host="www.dr.dk"
                         android:pathPrefix="/radio/ondemand/"/>
-                <data
-                        android:scheme="http"
-                        android:host="dr.dk"
-                        android:pathPrefix="/radio/live/"/>
-                <data
-                        android:scheme="http"
-                        android:host="www.dr.dk"
-                        android:pathPrefix="/radio/live/"/>
             </intent-filter>
         </activity>
 
